--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      # Set up Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+      
+      # Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+            python-version: "3.12"
+    
+      # Install Python dependencies
+      - name: Install Python dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+    
+
       - run: npm ci
       - id: date
         run: echo "date=$(TZ=America/Los_Angeles date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
