--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,11 @@ jobs:
             key: data-${{ hashFiles('src/data/*') }}-${{ steps.date.outputs.date }}
 
       - run: npm run build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
   
   # Deploy job
   deploy:
