--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,9 @@
 name: Deploy
 
 on:
-  # Run this workflow whenever a new commit is pushed to main.
   push: 
     branches:
       - main
-  # Run this workflow when triggered manually in GitHub’s UI.
   workflow_dispatch:
 
 jobs:
@@ -16,19 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Set up Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
       
-      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
             python-version: "3.12"
     
-      # Install Python dependencies
       - name: Install Python dependencies
         run: |
             python -m pip install --upgrade pip
@@ -52,24 +47,20 @@ jobs:
         with:
           path: dist
   
-  # Deploy job
+
   deploy:
-    # Add a dependency to the build job
     needs: build
 
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
+      pages: write
+      id-token: write
 
-    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
-    # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
+        uses: actions/deploy-pages@v4
