--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ diskcache==5.6.3
 idna==3.10
 numpy==2.2.4
 pandas==2.2.3
--e git+https://github.com/Datavisualiatie-UGent/project-dv25-8.git@63084e35c68d59bb8f68cd9dddeb4a9932ce9f87#egg=procyclingstats&subdirectory=procyclingstats
+-e git+https://github.com/Datavisualiatie-UGent/project-dv25-8.git@main#egg=procyclingstats&subdirectory=procyclingstats
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.3
