--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,11 @@ jobs:
 
       - run: npm ci
 
-      - id: date
-        run: echo "date=$(TZ=America/Los_Angeles date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
-
       - id: cache-data
         uses: actions/cache@v4
         with:
             path: src/.observablehq/cache
-            key: data-${{ hashFiles('src/data/*') }}-${{ steps.date.outputs.date }}
+            key: data-${{ hashFiles('src/data/*') }}
 
       - run: npm run build
 
